<resources>

    parte da CRUD
    <string name="app_name">SabeSó</string>
    <string name="inicio_sessao">Iniciar sessão</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="mensagemFixe">Conta criada com sucesso</string>
    <string name="mensagemErro">Ocorreu um erro ao criar a conta</string>
    <string name="dadosExistem">Os dados já existem</string>
    <string name="nomeUser">Nome</string>
    <string name="emailUser">Email</string>
    <string name="UserPass">Password</string>
    <string name="criarConta">Criar Conta</string>
    <string name="irParaLogin">Já tem conta? Inicie sessão</string>
    <string name="irParaIndex">VamosSó</string>
    <string name="verPerfil">Ver perfil</string>

    parte de IA

    <string name="Encontramos">O que encontramos?</string>
    <string name="Probabilidades">Probabilidades</string>
    <string name="TirarFoto">Tira foto do que queres saber!</string>
</resources>