<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            android:padding="15dp"
            android:text="@string/inicio_sessao"
            android:textColor="@color/white"
            android:textSize="55sp" />

        <EditText
            android:id="@+id/txtNomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black"
            android:ems="10"
            android:hint="@string/nomeUser"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/txtPassUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:ems="10"
            android:hint="@string/UserPass"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/txterro"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="" />


        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingStart="90sp"
            android:paddingEnd="90sp"
            android:text="Entrar" />

        <TextView
            android:id="@+id/msgCriado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />



    </LinearLayout>
    </LinearLayout>