<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetectarImagem">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/classified"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        />

    <!-- Texto de classificação -->
    <TextView
        android:id="@+id/classified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/result"
        android:layout_marginTop="5dp"
        android:text="@string/Encontramos"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Resultado da classificação -->
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/confidencesText"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="#C30000"
        android:textSize="27sp"
        android:textStyle="bold" />

    <!-- Texto de probabilidades -->
    <TextView
        android:id="@+id/confidencesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/confidence"
        android:layout_marginTop="15dp"
        android:text="@string/Probabilidades"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Probabilidades -->
    <TextView
        android:id="@+id/confidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="#C30000"
        android:textSize="22sp" />

    <!-- Botão para tirar foto -->
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_marginBottom="10dp"
        android:text="@string/TirarFoto"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />
</RelativeLayout>
